--- a/test/test.html
+++ b/test/test.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello World!</p>
-    <p>Changing index.html file</p>
+    <p>Some random bullshit</p>
 </body>
 </html>
